# Quadtree

./: CMakeLists.txt  README.md  main.cpp
include/: Container.hpp  Quadtree.hpp  Random.hpp  Shape.hpp  Vector2.hpp
include/Detail/: Meta.hpp
include/Object/: Base.hpp  Circle.hpp  Cyrcle.hpp  Rectangle.hpp
src/: Quadtree.cpp
src/Object/: Base.cpp  Rectangle.cpp
test/: demo.cpp  simple.cpp
